# Beatrix

./: .gitignore  README.md  install.sh  pyproject.toml
beatrix/cli/: main.py
beatrix/core/: auth_config.py  auto_login.py  engine.py  external_tools.py  kill_chain.py  nmap_scanner.py  packet_crafter.py
beatrix/reporters/: __init__.py
beatrix/scanners/: __init__.py  base.py  crawler.py  idor.py  nuclei.py  origin_ip_discovery.py  xxe.py
docs/manual/: index.html
tests/: test_otp_sessions.py
